--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -12,10 +12,11 @@
   </div>
   <div>
     <ul class="tabs z-depth-1 blue-grey darken-3 center">
-      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'about' ]">About</a></li>
-      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'photos' ]">Photos</a></li>
-      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'albums' ]">Albums</a></li>
-      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'comments' ]">Comments</a></li>
+      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'about' ]" routerLinkActive="active">About</a></li>
+      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'photos' ]" routerLinkActive="active">Photos</a></li>
+      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'albums' ]" routerLinkActive="active">Albums</a></li>
+      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'feedback' ]" routerLinkActive="active">Feedback</a></li>
+      <li class="tab"><a class="active" [ngStyle]="{padding: 0}"></a></li>
     </ul>
   </div>
   <div class="container">
