--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -6,16 +6,20 @@
       </div>
       <div class="title-block">
         <div class="title"><h5>{{user.firstName + ' ' + user.lastName}}</h5></div>
-        <a href="#" class="box-mail"><i class="material-icons">mail_outline</i></a>
+        <button (click)="openMessageForm()" class="box-mail btn-flat"><i class="material-icons">mail_outline</i></button>
       </div>
     </div>
   </div>
   <div>
     <ul class="tabs z-depth-1 blue-grey darken-3 center">
-      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'about' ]" routerLinkActive="active">About</a></li>
-      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'photos' ]" routerLinkActive="active">Photos</a></li>
-      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'albums' ]" routerLinkActive="active">Albums</a></li>
-      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'feedback' ]" routerLinkActive="active">Feedback</a></li>
+      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'about' ]" routerLinkActive="active">About</a>
+      </li>
+      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'photos' ]" routerLinkActive="active">Photos</a>
+      </li>
+      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'albums' ]" routerLinkActive="active">Albums</a>
+      </li>
+      <li class="tab col s3"><a [routerLink]="['/users', user.username, 'feedback' ]"
+                                routerLinkActive="active">Feedback</a></li>
       <li class="tab"><a class="active" [ngStyle]="{padding: 0}"></a></li>
     </ul>
   </div>
@@ -24,7 +28,4 @@
   </div>
 </div>
 
-
-
-
-
+<ng-template appRef></ng-template>
