--- a/src/app/cabinet/dashboard-page/dashboard-page.component.html
+++ b/src/app/cabinet/dashboard-page/dashboard-page.component.html
@@ -1,28 +1,28 @@
-<div class="block-wrapper">
+<div class="block-wrapper" *ngIf="user">
   <div class="coverphoto">
     <div class="container">
       <div class="avatar">
       </div>
       <div class="title-block">
-        <div class="title"><h5>Ryan Harris</h5></div>
-        <a href="#" class="box-mail"><i class="material-icons">mail_outline</i></a>
-        <a href="#"><i class="material-icons">edit</i></a>
+        <div class="title"><h5>{{user.firstName + ' ' + user.lastName}}</h5></div>
       </div>
     </div>
   </div>
   <div>
     <ul class="tabs z-depth-1 blue-grey darken-3 center">
-      <li class="tab col s3"><a href="#about">About</a></li>
-      <li class="tab col s3"><a class="active" href="#photos">Photos</a></li>
-      <li class="tab col s3"><a href="#albums">Albums</a></li>
+      <li class="tab col s3"><a [routerLink]="['/cabinet', 'dashboard', 'about' ]" routerLinkActive="active">About</a>
+      </li>
+      <li class="tab col s3"><a [routerLink]="['/cabinet', 'dashboard', 'photos' ]" routerLinkActive="active">Photos</a>
+      </li>
+      <li class="tab col s3"><a [routerLink]="['/cabinet', 'dashboard', 'albums' ]" routerLinkActive="active">Albums</a>
+      </li>
+      <li class="tab col s3"><a [routerLink]="['/cabinet', 'dashboard', 'feedback' ]"
+                                routerLinkActive="active">Feedback</a></li>
+      <li class="tab"><a class="active" [ngStyle]="{padding: 0}"></a></li>
     </ul>
   </div>
   <div class="container">
-    <div id="about" class="col s12">About</div>
-    <div id="photos" class="col s12">
-      <app-gallery></app-gallery>
-    </div>
-    <div id="albums" class="col s12">Albums</div>
+    <router-outlet></router-outlet>
   </div>
 </div>
 
