--- a/src/app/cabinet/upload-page/upload-page.component.html
+++ b/src/app/cabinet/upload-page/upload-page.component.html
@@ -1,46 +1,36 @@
 <div class="container">
-  <div *ngIf="previewUrl">
-    <img [src]="previewUrl" height="300">
+  <div *ngIf="previewUrl" class="col s12">
+    <img [src]="previewUrl">
   </div>
 
   <form method="post" [formGroup]="form" (ngSubmit)="uploadFileToActivity()">
 
-    <div class="file-field input-field col s6">
+    <div class="file-field input-field col s12">
       <div class="btn">
         <span>File</span>
         <input type="file" id="file" formControlName="file" accept="image/*"
                (change)="handleFileInput($event.target.files)">
       </div>
       <div class="file-path-wrapper">
-        <input class="file-path validate" type="text">
+        <input class="file-path validate" type="text" formControlName="filePath">
       </div>
     </div>
 
-    <mz-input-container class="col s6">
-      <input mz-input
-             id="description"
-             formControlName="description"
-             type="text"
-             [label]="'Description'"
-             [placeholder]="'Enter description'">
-    </mz-input-container>
+    <div class="input-field col s12">
+      <input id="description" type="text" formControlName="description">
+      <label for="description">Description</label>
+    </div>
 
-    <mz-select-container class="col s6">
-      <select mz-select multiple
-              id="categories"
-              formControlName="categories"
-              [label]="'Categories'"
-              [placeholder]="'Select categories'"
-      >
-        <option *ngFor="let category of categories" [ngValue]="category">{{category}}</option>
+    <div class="input-field col s12">
+      <select multiple id="categories" formControlName="categories">
+        <option *ngFor="let category of categories" [value]="category">{{category}}</option>
       </select>
-    </mz-select-container>
+      <label for="categories">Choose category</label>
+    </div>
 
     <button mz-button [disabled]="form.invalid" type="submit"
     >Upload<i class="material-icons right">send</i>
     </button>
 
   </form>
-
-
 </div>
