--- a/src/app/album-card/album-card.component.html
+++ b/src/app/album-card/album-card.component.html
@@ -1,17 +1,13 @@
-<div class="col l4 m6 s12">
-  <mz-card
-    class="blue-grey darken-3 white-text"
-    [hoverable]="true">
-    <mz-card-image>
-      <div class="album-cover">
+  <div class="col s12 m6 l4">
+    <div class="card blue-grey darken-3 white-text">
+      <div class="card-image">
         <img
           *ngFor="let photo of album.photos | slice :0:4"
           [src]=photo.imageUrl
           class="col s6"/>
       </div>
-    </mz-card-image>
-    <mz-card-content>
-      {{album.name}}
-    </mz-card-content>
-  </mz-card>
-</div>
+      <div class="card-content">
+        <p>{{album.name}}</p>
+      </div>
+    </div>
+  </div>
