--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -1,12 +1,12 @@
-<mz-card *ngIf="album"
-  class="blue-grey darken-1 white-text col s12"
-  [hoverable]="true">
-  <mz-card-title>
-    {{album.name}}
-  </mz-card-title>
-  <mz-card-content>
-    {{album.description}}
-  </mz-card-content>
-</mz-card>
+<div class="row" *ngIf="album">
+  <div class="col s12">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">{{album.name}}</span>
+        <p>{{album.description}}</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 <app-gallery *ngIf="album" [photos]="album.photos"></app-gallery>
