--- a/src/app/comment/comment.component.css
+++ b/src/app/comment/comment.component.css
@@ -1,10 +1,10 @@
-.card{
+.card {
   margin-left: 10%;
   margin-right: 10%;
 }
 
-.feedback-head{
-  display: flex;
+.card-title {
+  display: flex !important;
   justify-content: space-between;
 }
 
