--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,27 +1,27 @@
-<mz-modal [fixedFooter]="true" >
+<mz-modal [fixedFooter]="true">
   <mz-modal-header>
     <h4>Send email to photographer</h4>
   </mz-modal-header>
   <mz-modal-content>
     <form id="form" method="post" [formGroup]="form" (ngSubmit)="send()">
-      <mz-input-container>
-        <input mz-input
-               id="email"
-               type="email"
-               formControlName="email"
-               [label]="'Your Email'"
-               [ngClass]="{invalid: form.get('email').touched && form.get('email').invalid,
+      <div class="input-field col s12">
+        <input
+          id="email"
+          type="email"
+          formControlName="email"
+          [ngClass]="{invalid: form.get('email').touched && form.get('email').invalid,
                valid: form.get('email').valid}"
         >
-      </mz-input-container>
-      <mz-input-container>
-        <input mz-input
-               id="phone"
-               type="text"
-               formControlName="phone"
-               [label]="'Your Phone'"
+        <label for="email">Your Email</label>
+      </div>
+      <div class="input-field col s12">
+        <input
+          id="phone"
+          type="text"
+          formControlName="phone"
         >
-      </mz-input-container>
+        <label for="phone">Your Phone</label>
+      </div>
       <mz-textarea-container>
       <textarea mz-textarea class="white-text"
                 id="text"
